# rockingdata_ch

./: README.md  pyproject.toml
Python/: main.py  rocking.json
SQL/: create_tables.sql  queries.sql  respuestas_negocio.sql
