[tool.poetry]
name = "Python"
version = "0.1.0"
description = ""
authors = ["Manu <manufuentes28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
docker-cp = "^1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
